// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserLinks /> <MobileNavMenu /> Should render and match the snapshot 1`] = `
<WithStyles(ForwardRef(Menu))
  anchorEl={Object {}}
  anchorOrigin={
    Object {
      "horizontal": "center",
      "vertical": "bottom",
    }
  }
  classes={
    Object {
      "paper": undefined,
    }
  }
  disableAutoFocusItem={true}
  elevation={0}
  getContentAnchorEl={null}
  id="mobileNav"
  onClose={[MockFunction]}
  open={true}
  transformOrigin={
    Object {
      "horizontal": "center",
      "vertical": "top",
    }
  }
>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    exact={true}
    to="/"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <HomeOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.home"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/campaigns"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <WbIncandescentOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.innovate"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/news"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <QuestionAnswerOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.news"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/events"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <EventOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.events"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/groups"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <GroupOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.groups"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/downloads"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <CloudDownloadOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.downloads"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/mentorship"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <GroupWorkOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.mentorship"
    />
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(Menu))>
`;

exports[`<UserLinks /> <NavMenu /> Should render and match the snapshot 1`] = `
<WithStyles(ForwardRef(Toolbar))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    exact={true}
    to="/"
  >
    <Hidden
      smDown={true}
    >
      <HomeOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.home"
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/campaigns"
  >
    <Hidden
      smDown={true}
    >
      <WbIncandescentOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.innovate"
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/news"
  >
    <Hidden
      smDown={true}
    >
      <QuestionAnswerOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.news"
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/events"
  >
    <Hidden
      smDown={true}
    >
      <EventOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.events"
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/groups"
  >
    <Hidden
      smDown={true}
    >
      <GroupOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.groups"
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/downloads"
  >
    <Hidden
      smDown={true}
    >
      <CloudDownloadOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.downloads"
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/mentorship"
  >
    <Hidden
      smDown={true}
    >
      <GroupWorkOutlinedIcon />
    </Hidden>
    <Memo(DiverstFormattedMessage)
      id="diverst.containers.Routes.user.mentorship"
    />
  </WithStyles(ForwardRef(Button))>
</WithStyles(ForwardRef(Toolbar))>
`;

exports[`<UserLinks /> Should render and match the snapshot 1`] = `
<Fragment>
  <Hidden
    smUp={true}
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(Button))
        aria-haspopup="true"
        onClick={[Function]}
      >
        <ArrowDropDownIcon
          className=""
        />
        <Memo(DiverstFormattedMessage)
          id="diverst.containers.Routes.user.home"
        />
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Toolbar))>
    <MobileNavMenu
      classes={Object {}}
      handleMobileNavClose={[Function]}
      isMobileNavOpen={false}
      mobileNavAnchor={null}
    />
  </Hidden>
  <Hidden
    xsDown={true}
  >
    <NavLinks
      classes={Object {}}
    />
  </Hidden>
</Fragment>
`;
